# discord-bot

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  example.json
.github/workflows/: docker-publish.yml
bot/: Cargo.toml  Dockerfile  README.Docker.md
bot/src/: main.rs
bot/src/models/: db_structs.rs  mod.rs  raiderio_structs.rs
bot/src/responses/: crafting_responses.rs  progress_responses.rs
db_update/: Cargo.toml  dockerfile
db_update/src/: auth.rs  main.rs
db_update/src/db/: db_init.rs  db_updates.rs
db_update/src/models/: mod.rs
db_update/src/models/blizzard_structs/: character_professions.rs  character_score.rs  guild.rs  mod.rs  recipe_materials.rs
models/: characters.rs
src/: auth.rs  main.rs  responses.rs
src/db/: db_init.rs  db_updates.rs  mod.rs
src/models/: db_structs.rs  mod.rs  raiderio_structs.rs
src/models/blizzard_structs/: character_professions.rs  mod.rs  recipe_materials.rs
src/responses/: basic.rs  crafting_responses.rs  mod.rs  progress_responses.rs  raiderio_responses.rs
