[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
google-calendar = "0.7.0"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = { version = "*", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
