[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
google-calendar = "0.7.0"
lazy_static = "1.5.0"
poise = "0.6.1"
reqwest = { version = "0.12.8", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.210"
serde_json = "1.0.128"
serenity = "0.12.2"
tokio = { version = "*", features = ["full"] }
tokio-rusqlite = "0.6.0"
uuid = { version = "1.10.0", features = ["v7"] }
