[package]
name = "db_update"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
google-calendar = "0.7.0"
lazy_static = "1.5.0"
poise = "0.6.1"
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.215"
serde_json = "1.0.133"
serenity = "0.12.4"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rusqlite = "0.6.0"
uuid = { version = "1.11.0", features = ["v7"] }
